objects/Booking_Package__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. (Parent Account)</errorMessage>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking Packages/Prov Requests (Parent Account)</relationshipLabel>
        <relationshipName>Booking_Packages_Prov_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>NE 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>NE 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>NE 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>PIA 0</fullName>
                </value>
                <value>
                    <fullName>PIA 30</fullName>
                </value>
                <value>
                    <fullName>PIA 90</fullName>
                </value>
                <value>
                    <fullName>PIA 180</fullName>
                </value>
                <value>
                    <fullName>Others/Non-Standard</fullName>
                </value>
                <value>
                    <fullName>Equal Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <formula>Actual_TCV_P_M__c - Maint1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Actual_TCV_P_M__c - Maint_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_End_Date__c</fullName>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <label>Reason for Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rec_Risk_Rating__c</fullName>
        <label>Rec Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This picklist will drive the available options for what Actual Transaction Types are shown on a Booking Package.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Accounting_Start__c</fullName>
        <label>Revenue Accounting Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revenue_Accounting_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Accounting Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_Technologies__c</fullName>
        <label>SAM Technologies</label>
        <picklist>
            <picklistValues>
                <fullName>Altos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jasper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rocketick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sigirity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP__c</fullName>
        <label>SAP #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Finance_Start__c</fullName>
        <label>Sales Finance Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Finance_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Finance Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Operations_Start__c</fullName>
        <label>Sales Operations Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Operations_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Operations Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>San_Jose_Rev_Acct_Start__c</fullName>
        <label>San Jose Rev Acct Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>San_Jose_Rev_Acct_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>San Jose Rev Acct Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sandy_Rev_Acct_Start__c</fullName>
        <label>Sandy Rev Acct Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sandy_Rev_Acct_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sandy Rev Acct Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_to_Legal_Values__c</fullName>
        <label>Send to Legal Values</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_Legal__c</fullName>
        <inlineHelpText>Legal Group 1 MOD =  NA T&amp;C&apos;s w/MOD in footer OR Cadence Canada

Legal Group 1 STD/PAC = US T&amp;C&apos;s w/STD or PAC in footer

Legal 2 = Cadence Ireland

Legal 3 = Cadence Israel, AB, BV, GmbH, Limited, SAS, Sri, Ltd, Netherlands BV

Legal 4 = Japan</inlineHelpText>
        <label>Send to Legal</label>
        <picklist>
            <picklistValues>
                <fullName>Legal 1 STD/PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal 1 MOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal 4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signatories__c</fullName>
        <inlineHelpText>Select CDNS Entity for required signatures.</inlineHelpText>
        <label>Signatories</label>
        <picklist>
            <picklistValues>
                <fullName>Cadence Design Systems Inc. STD/PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems Inc. MOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Canada) Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Ireland) Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Israel) Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems GmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems S.A.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems S.r.I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Netherlands) B.V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Japan) B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan - Cadence Design Systems Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems Kft. (Hungary)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
	<fields>
        <fullName>Signatory_Start__c</fullName>
        <label>Signatory Start</label>
        <summarizedField>Booking_Package_Signatories__c.Start__c</summarizedField>
        <summaryForeignKey>Booking_Package_Signatories__c.Booking_Package__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Signatory_Total_Time__c</fullName>
        <label>Signatory Total Time</label>
        <summarizedField>Booking_Package_Signatories__c.Time_Hours__c</summarizedField>
        <summaryForeignKey>Booking_Package_Signatories__c.Booking_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ts_Cs__c</fullName>
        <description>Created for Ticket #3275607</description>
        <label>Ts &amp; Cs</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Beyond Expiration date of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior to effective date of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramp Config w/Initial Shipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Legal_Start__c</fullName>
        <label>US Legal Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>US_Legal_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>US Legal Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_posted__c</fullName>
        <label>Date Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Booking Package / Provisional Request</label>
    <listViews>
        <fullName>AP_Legal</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>AP Legal</label>
        <queue>AP_Legal</queue>
    </listViews>
    <listViews>
        <fullName>Credit</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit</label>
        <queue>Credit</queue>
    </listViews>
    <listViews>
        <fullName>Current_Quarter_Package</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Actual_TCV_P_M__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Shipped_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shipped_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Opportunity_ID__c</field>
            <operation>equals</operation>
        </filters>
        <label>Current Quarter Packages</label>
    </listViews>
    <listViews>
        <fullName>Dublin_Order_Management</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Queue</filterScope>
        <label>Dublin Order Management</label>
        <queue>Dublin_Order_Management</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>EMEA_BPR</fullName>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Actual_Deal_TCV__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Region__c</columns>
        <columns>Expected_Close_Quarter__c</columns>
        <columns>SAP__c</columns>
        <columns>Booked_Date__c</columns>
        <columns>Actual_Quarter_Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Cadence Migration</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/10/2014 12:00 AM</value>
        </filters>
        <label>EMEA BPR</label>
        <sharedTo>
            <group>BP_Testing_Approvers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_Credit_Booking_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>JP Credit</label>
        <queue>JP_Credit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JP_RA_Booking_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>JP RA</label>
        <queue>JP_RA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LEGAL_SD</fullName>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Booking_Approval_Step__c</columns>
        <columns>SAP__c</columns>
        <columns>Send_to_Legal__c</columns>
        <columns>Ts_Cs__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Region__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booking_Approval_Step__c</field>
            <operation>contains</operation>
            <value>Approval to Legal,Approval to Legal Group 1 MOD</value>
        </filters>
        <filters>
            <field>Send_to_Legal__c</field>
            <operation>equals</operation>
            <value>Legal 1 STD/PAC,Legal 1 MOD</value>
        </filters>
        <label>Legal Assignment</label>
        <sharedTo>
            <group>Legal_Group_1</group>
            <role>Order_Fulfillment_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prov_Keys</fullName>
        <columns>NAME</columns>
        <columns>Actual_Transaction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Booking_Package__c.Prov_Request</value>
        </filters>
        <label>Prov Keys</label>
    </listViews>
    <listViews>
        <fullName>Prov_Keys_test</fullName>
        <columns>NAME</columns>
        <columns>Actual_Transaction_Type__c</columns>
        <columns>Actual_Quarter_Close_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Booking_Package__c.Prov_Request</value>
        </filters>
        <label>Prov Keys test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Signatory_2_Booking_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Signatory Ireland</label>
        <queue>Signatory_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Signatory_3_Booking_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Signatory EMEA</label>
        <queue>Signatory_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Signatory_4_Booking_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Signatory Japan</label>
        <queue>Signatory_4</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Signatory_AB_Booking_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Signatory AB</label>
        <queue>Signatory_AB</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Signatory_BV_Booking_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Signatory BV</label>
        <queue>Signatory_BV</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BP-{000}</displayFormat>
        <label>Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Packages/Prov Requests</pluralLabel>
    <recordTypes>
        <fullName>Booking_Package</fullName>
        <active>true</active>
        <description>Use this type of record to create a Booking Package request.</description>
        <label>Booking Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prov_Request</fullName>
        <active>true</active>
        <description>Use this type of record to create a Provisional Key Request.</description>
        <label>Prov Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Actual_Term_Must_Be_Positive</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
Actual_Term__c &lt;0)</errorConditionFormula>
        <errorDisplayField>Actual_Term__c</errorDisplayField>
        <errorMessage>Actual Term must be a number greater or equal to 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Term_cannot_be_Null_for_some_TT</fullName>
        <active>true</active>
        <description>If Actual Transaction Type is not equal to SERV, Serv - IP, 99-YR/Other, VAR-99-Yr, HW-99Yr, AMEND-Serv or AMEND, Actual Term cannot be blank.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /* Merge Issue */ 
 $Setup.Data_Migration__c.Data_Migration_Bypass__c == false,
	AND(
		NOT(TEXT(Actual_Transaction_Type__c)=&quot;SERV&quot;),
                NOT(TEXT(Actual_Transaction_Type__c)=&quot;Serv - IP&quot;),
		NOT(TEXT(Actual_Transaction_Type__c)=&quot;99-YR/Other&quot;),
		NOT(TEXT(Actual_Transaction_Type__c)=&quot;VAR-99-Yr&quot;),
		NOT(TEXT(Actual_Transaction_Type__c)= $Label.BP_TransType_CVA_99Yr ),
NOT(TEXT(Actual_Transaction_Type__c)=&quot;AMEND-Serv&quot;),
NOT(TEXT(Actual_Transaction_Type__c)=&quot;AMEND&quot;)
	),
	ISBLANK(Actual_Term__c),
         $RecordType.Name =&quot;Booking Package&quot;
)</errorConditionFormula>
        <errorDisplayField>Actual_Term__c</errorDisplayField>
        <errorMessage>If Actual Transaction Type is not equal to SERV, Serv - IP, 99-YR/Other, VAR-99-Yr, HW-99Yr, AMEND-Serv or AMEND, Actual Term cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BP_Cant_Use_Both_CDN_Agreement_Fields</fullName>
        <active>true</active>
        <description>This validation rule will fire if both the manual and lookup CDN Agreement fields are populated.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
NOT(ISBLANK( CDN_Agreement__c )) , 
NOT(ISBLANK( Entry_CDN_Agreement__c )) 
)</errorConditionFormula>
        <errorDisplayField>Entry_CDN_Agreement__c</errorDisplayField>
        <errorMessage>You can only use one CDN Agreement field. Please use the lookup to find an existing Agreement, or use the Entry field to type in the Agreement number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Edit_Locked_BP</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    $Profile.Name&lt;&gt;&quot;2_4 - Regional Sales VPsClone&quot;,
    $Profile.Name&lt;&gt;&quot;2_5 - Sales OperationsCloneMarketo&quot;,
    $Profile.Name&lt;&gt;&quot;2_5 - Sales OperationsClone&quot;,
    $Profile.Name&lt;&gt;&quot;3_1 - Order Fulfillment - Manager&quot;,
    $Profile.Name&lt;&gt;&quot;3_1 - Order Fulfillment - ManagerClone&quot;,
    $Profile.Name&lt;&gt;&quot;3_2 - Order Fulfillment - User&quot;,
    $Profile.Name&lt;&gt;&quot;3_2 – Order Management Apttus SuperUser&quot;,
    $Profile.Name&lt;&gt;&quot;3_3 - Order Fulfillment - AP&quot;,
    $Profile.Name&lt;&gt;&quot;3_3 AND 5_3-Order Fulfillmnet-AP PLUS AE&quot;,
    $Profile.Name&lt;&gt;&quot;4_5 - Credit&quot;,
    $Profile.Name&lt;&gt;&quot;5_1 - Data Steward&quot;,
    $Profile.Name&lt;&gt;&quot;Integration&quot;,
    $Profile.Name&lt;&gt;&quot;System Administrator Custom&quot;,
    $Profile.Name&lt;&gt;&quot;System Administrator&quot;,
    $Profile.Name&lt;&gt;&quot;System Admin ReadOnly&quot;,
    $Profile.Name&lt;&gt; Account_Director__r.Profile.Name,
   
    ISPICKVAL(Status__c, &quot;Pending&quot;)
)</errorConditionFormula>
        <errorMessage>You cannot edit Booking Package while it is locked for Approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expedite_Comments_cannot_be_blank</fullName>
        <active>true</active>
        <description>This validation rule will require the Expedite Comments field if the Expedite Booking Package checkbox is used.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
 Expedite_Booking_Package__c =TRUE,
ISBLANK( Expedite_Comments__c )
)</errorConditionFormula>
        <errorDisplayField>Expedite_Comments__c</errorDisplayField>
        <errorMessage>Expedite Comments cannot be blank if Expedite Booking Package is checked. Please provide comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_No</fullName>
        <active>true</active>
        <description>Invoice Number field is editable only for Region &quot;Asia Pacific&quot;</description>
        <errorConditionFormula>AND($Setup.Data_Migration__c.Data_Migration_Bypass__c == false, 
$Profile.Name != &apos;5_1 - Data Steward&apos;, 
NOT(CONTAINS($User.LastName , &apos;Migration&apos;)),
isMigrated_Record__c == false,
AND(NOT(ISBLANK( Invoice_Number_AP__c )), NOT(ISPICKVAL(Region__c, &apos;Asia Pacific&apos;))))</errorConditionFormula>
        <errorDisplayField>Invoice_Number_AP__c</errorDisplayField>
        <errorMessage>Invoice No. is editable only for Asia Pacific flow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Of_Days_Or_Start_and_End</fullName>
        <active>true</active>
        <description>This validation rule will fire if both Number of Days and Proposed Start and Proposed End are populated. Users should use one of the other.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
NOT(ISBLANK( Number_of_Days__c )),
NOT(ISBLANK(  Proposed_Start_Date__c )),
NOT(ISBLANK(  Proposed_End_Date__c  ))
)</errorConditionFormula>
        <errorDisplayField>Number_of_Days__c</errorDisplayField>
        <errorMessage>Please use Number of Days or Proposed Start and End Dates, but not both</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_One_Legal_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
INCLUDES(Send_to_Legal__c, &quot;Legal 1 MOD&quot;),
INCLUDES(Send_to_Legal__c, &quot;Legal 1 STD/PAC&quot;)
)</errorConditionFormula>
        <errorDisplayField>Send_to_Legal__c</errorDisplayField>
        <errorMessage>Between Legal 1 MOD and Legal 1 STD/PAC, only one can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_EMEA_And_AP_Legal_Groups</fullName>
        <active>false</active>
        <description>This rule will trigger if EMEA or Asia Pacific is selected as the Region but Legal 2 or 3 is not one of the groups selected.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
NOT(ISPICKVAL( Actual_Transaction_Type__c,&quot;HW-99Yr&quot;)),
OR(
ISPICKVAL(Region__c , &quot;EMEA&quot;),
ISPICKVAL(Region__c , &quot;Asia Pacific&quot;)
),
NOT(ISNULL(Send_to_Legal__c )),
NOT(INCLUDES(Send_to_Legal__c, &quot;Legal 2&quot;)),
NOT(INCLUDES(Send_to_Legal__c, &quot;Legal 3&quot;))
)</errorConditionFormula>
        <errorDisplayField>Send_to_Legal__c</errorDisplayField>
        <errorMessage>If Region = EMEA or Asia Pacific and any legal group is selected, Legal 2 or Legal 3 must be included.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_India_Legal_Groups</fullName>
        <active>false</active>
        <description>This rule will trigger if India is selected as the Region but Legal 2 is not one of the groups selected.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
 ISPICKVAL(Region__c , &quot;India&quot;),
NOT(ISNULL(Send_to_Legal__c )),
 NOT(INCLUDES(Send_to_Legal__c, &quot;Legal 2&quot;))
)</errorConditionFormula>
        <errorDisplayField>Send_to_Legal__c</errorDisplayField>
        <errorMessage>If Region = India and any legal group is selected, Legal 2 must be included.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_JP_Legal_Groups</fullName>
        <active>false</active>
        <description>This rule will trigger if Japan is selected as the Region but Legal 4 is not one of the groups selected.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
 ISPICKVAL(Region__c , &quot;Japan&quot;),
NOT(ISNULL(Send_to_Legal__c )),
 NOT(INCLUDES(Send_to_Legal__c, &quot;Legal 4&quot;))
)</errorConditionFormula>
        <errorDisplayField>Send_to_Legal__c</errorDisplayField>
        <errorMessage>If Region = Japan and any legal group is selected, Legal 4 must be included.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_NA_Legal_Groups</fullName>
        <active>false</active>
        <description>This rule will trigger if North America is selected as the Region but Legal 1 is not one of the groups selected.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
 ISPICKVAL(Region__c , &quot;North America&quot;),
NOT(ISNULL(Send_to_Legal__c )),
NOT(OR(INCLUDES(Send_to_Legal__c, &quot;Legal 1 MOD&quot;),INCLUDES(Send_to_Legal__c, &quot;Legal 1 STD/PAC&quot;)))

)</errorConditionFormula>
        <errorDisplayField>Send_to_Legal__c</errorDisplayField>
        <errorMessage>If Region = North America and any legal group is selected, Legal 1 must be included.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_SAM_Technologies_cannot_be_blank</fullName>
        <active>true</active>
        <description>If SAM is selected, SAM Technologies cannot be blank.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
 isMigrated_Record__c == false,
        CONTAINS(TEXT(Actual_Transaction_Type__c), &quot;SAM&quot;) ,
	ISPICKVAL( SAM_Technologies__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>SAM_Technologies__c</errorDisplayField>
        <errorMessage>If a SAM is selected, SAM Technologies cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_SAM_Technologies_must_be_blank</fullName>
        <active>true</active>
        <description>If non-SAM is selected, SAM Technologies must be blank.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
 isMigrated_Record__c == false,
                NOT(CONTAINS(TEXT(Actual_Transaction_Type__c), &quot;SAM&quot;)) ,
		NOT(ISBLANK(TEXT( SAM_Technologies__c )))
)</errorConditionFormula>
        <errorDisplayField>SAM_Technologies__c</errorDisplayField>
        <errorMessage>If a SAM is not selected, SAM Technologies must be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_Must_Contain_Numbers_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, /*ASR #566115 : Merging Issue */ 
NOT(ISBLANK(SAP__c)),
NOT (ISNUMBER( SAP__c ))
)</errorConditionFormula>
        <errorDisplayField>SAP__c</errorDisplayField>
        <errorMessage>SAP Number must contain only numbers.</errorMessage>
    </validationRules>
</CustomObject>